# adventOfCode

./: .Search.hs.swp  .gitignore  .swp  .~lock.d24.svg#  1  2015toReview  2016toReview  :w  :wq  General.hi  General.hs  InputRetrieval.hs  README.md  Search.hs  adventOfCode.cabal  aoc2024.prof  cabal.project  cave  cookies.json  cookies.txt  d14  d17  d18  d2.txt  d21  d23  day14  day15  day20  ghc-9.6.6.hp  master.txt  proxy  template.hs  test14  text.txt
2015/: Main.hs
2015/days/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2016/: Main.hs
2016/days/: Assembunny.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  MD5.hs
2017/: Main.hs
2017/days/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  KnotHash.hs
2018/: Main.hs
2018/days/: Computer.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2019/: .Intcode.hs.swo  Intcode.hs  Main.hs
2019/days/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2020/: Main.hs
2020/days/: .Day20.hs.swo  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2021/: Main.hs
2021/days/: .ALEPreviewWindow.swp  .Day1.hs.swp  .Day3.hs.swo  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2022/: General.hs  Main.hs  Search.hs  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day2.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs  template.hs
2022/days/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2023/: General.hs  InputRetrieval.hs  Main.hs  day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  template.hs
2023/days/: .ALEPreviewWindow.swp  .Day12.hs.swo  .Day25.hs.swo  .Day8.hs.swp  .Day9.hs.swp  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day12_BACKUP_25848.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Part.hs  day20.dot  
2024/: Main.hs
2024/days/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2025/: Main.hs
2025/days/: Day1.hs  Day1.hsE  Day10.hs  Day10.hsE  Day11.hs  Day11.hsE  Day12.hs  Day12.hsE  Day13.hsE  Day14.hsE  Day15.hsE  Day16.hsE  Day17.hsE  Day18.hsE  Day19.hsE  Day2.hs  Day2.hsE  Day20.hsE  Day21.hsE  Day22.hsE  Day23.hsE  Day24.hsE  Day25.hsE  Day3.hs  Day3.hsE  Day4.hs  Day4.hsE  Day5.hs  Day5.hsE  Day6.hs  Day6.hsE  Day7.hs  Day7.hsE  Day8.hs  Day8.hsE  Day9.hs  Day9.hsE
app/: Main.hs
bench/: Bench.hs
bench/fullyear/: FullYear.hs
bench/general/: Bench.hs
fullyear/: FullYear.hs
helpers/: General.hs  Parsers.hs  Search.hs
lib/Helpers/: General.hs  Graph.hs  Maths.hs  Parsers.hs  Search.hs
lib/Helpers/General/: ByteString.hs  Streamly.hs  Text.hs
lib/Helpers/Heap/: Mutable.hs
lib/Helpers/Heap/Primitive/: Mutable.hs
lib/Helpers/Heap/Unboxed/: Mutable.hs
lib/Helpers/Parsers/: ByteString.hs  FlatParse.hs  Text.hs
lib/Helpers/Search/: Int.hs
lib/Helpers/Streamly/: Fold.hs
