cabal-version:      2.4
name:               adventOfCode
version:            2024 

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             GuillaumedeVolpiano
maintainer:         guillaumedevolpiano@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

library helpers
  hs-source-dirs:   lib
  exposed-modules:
    Helpers.General
    Helpers.General.ByteString
    Helpers.General.Text
    Helpers.Graph
    Helpers.Maths
    Helpers.Parsers
    Helpers.Parsers.ByteString
    Helpers.Parsers.FlatParse
    Helpers.Parsers.Text
    Helpers.Search
    Helpers.Search.Int

  build-depends:
    , array
    , base
    , bytestring
    , containers
    , curl
    , directory
    , fgl
    , flatparse
    , graphviz
    , hashable
    , linear
    , megaparsec
    , psqueues
    , regex-tdfa
    , split
    , text                  >=2.1
    , time
    , timeit
    , unordered-containers
    , utf8-string
    , word8

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2015
  main-is:          Main.hs
  hs-source-dirs:   2015
  build-depends:
    , base
    , bytestring
    , cmdargs
    , containers
    , days2015
    , helpers
    , time

  ghc-options:      -fllvm -threaded -O3 "-with-rtsopts=-N8 -p"
  default-language: Haskell2010

library days2015
  hs-source-dirs:   2015/days
  exposed-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  build-depends:
    , arithmoi
    , base
    , base16-bytestring
    , bytestring
    , cereal
    , containers
    , cryptohash-md5
    , flatparse
    , hashable
    , hashtables
    , helpers
    , linear
    , massiv
    , megaparsec
    , mtl
    , multiset
    , psqueues
    , streamly
    , streamly-core
    , text                  >=2.1
    , transformers
    , unordered-containers
    , utf8-string
    , vector
    , word8

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2016
  main-is:          Main.hs
  hs-source-dirs:   2016
  build-depends:
    , arithmoi
    , array
    , base
    , base16-bytestring
    , binary
    , bytestring
    , cmdargs
    , containers
    , criterion
    , cryptohash-md5
    , curl
    , data-clist
    , days2016
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , infinite-list
    , linear
    , megaparsec
    , mtl
    , parallel
    , parser-combinators
    , psqueues
    , regex-pcre
    , regex-tdfa
    , split
    , text
    , text-show
    , time
    , timeit
    , transformers
    , unordered-containers
    , vector
    , wide-word

  ghc-options:      -fllvm -threaded -O3 "-with-rtsopts=-N8 -p"
  default-language: Haskell2010

library days2016
  hs-source-dirs:   2016/days
  exposed-modules:
    Assembunny
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    MD5

  build-depends:
    , arithmoi
    , array
    , base
    , base16-bytestring
    , binary
    , bytestring
    , cmdargs
    , containers
    , criterion
    , cryptohash-md5
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , infinite-list
    , linear
    , megaparsec
    , mtl
    , parallel
    , parser-combinators
    , psqueues
    , regex-pcre
    , regex-tdfa
    , split
    , text
    , text-show
    , time
    , timeit
    , transformers
    , unordered-containers
    , vector
    , wide-word

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2017
  main-is:          Main.hs
  hs-source-dirs:   2017 2017/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    KnotHash

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , arithmoi
    , array
    , base
    , cmdargs
    , containers
    , criterion
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , linear
    , megaparsec
    , parallel
    , parser-combinators
    , psqueues
    , regex-pcre
    , regex-tdfa
    , split
    , text
    , time
    , timeit
    , transformers
    , unordered-containers
    , vector

  ghc-options:      -threaded
  default-language: Haskell2010

executable aoc2018
  main-is:          Main.hs
  hs-source-dirs:   2018 2018/days
  other-modules:
    Computer
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , arithmoi
    , array
    , base
    , cmdargs
    , containers
    , criterion
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , lens
    , linear
    , megaparsec
    , monad-loops
    , mtl
    , multiset
    , parallel
    , psqueues
    , split
    , text
    , time
    , timeit
    , unordered-containers
    , utility-ht
    , vector

  ghc-options:      -O1 -threaded
  default-language: Haskell2010

executable aoc2019
  main-is:          Main.hs
  hs-source-dirs:   2019 2019/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Intcode

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , arithmoi
    , array
    , base
    , cmdargs
    , containers
    , criterion
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , lens
    , linear
    , megaparsec
    , monad-loops
    , mtl
    , multiset
    , parallel
    , psqueues
    , split
    , text
    , time
    , timeit
    , unordered-containers
    , vector

  ghc-options:      -O1 -threaded
  default-language: Haskell2010

executable aoc2020
  main-is:          Main.hs
  hs-source-dirs:   2020 2020/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , arithmoi
    , array
    , base
    , cmdargs
    , containers
    , criterion
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , linear
    , megaparsec
    , monad-loops
    , mtl
    , parallel
    , psqueues
    , split
    , text
    , time
    , timeit
    , unordered-containers
    , vector

  ghc-options:      -threaded
  default-language: Haskell2010

executable aoc2021
  main-is:          Main.hs
  hs-source-dirs:   2021 2021/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , array
    , base
    , cmdargs
    , containers
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , linear
    , megaparsec
    , mtl
    , multiset
    , psqueues
    , regex-tdfa
    , split
    , text
    , time
    , timeit
    , unordered-containers

  default-language: Haskell2010

executable aoc2022
  main-is:          Main.hs
  hs-source-dirs:   2022 2022/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  --
  --    -- LANGUAGE extensions used by modules in this package.
  --    -- other-extensions:
  build-depends:
    , array
    , base
    , cmdargs
    , containers
    , curl
    , data-clist
    , directory
    , hashable
    , helpers
    , linear
    , megaparsec
    , psqueues
    , regex-tdfa
    , split
    , time
    , timeit
    , unordered-containers

  default-language: Haskell2010

library days2023
  hs-source-dirs:   2023/days
  exposed-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Part

  build-depends:
    , arithmoi
    , array
    , base
    , bytestring
    , containers
    , fgl
    , flatparse
    , hashable
    , helpers
    , linear
    , megaparsec
    , parallel
    , psqueues
    , regex-tdfa
    , split
    , text                  >=2.1
    , unordered-containers
    , utf8-string
    , word8

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2023
  main-is:          Main.hs
  hs-source-dirs:   2023
  build-depends:
    , base
    , bytestring
    , cmdargs
    , containers
    , days2023
    , helpers
    , time

  ghc-options:      -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8 -p"
  default-language: Haskell2010

executable aoc2024
  main-is:          Main.hs
  hs-source-dirs:   2024
  build-depends:
    , base
    , bytestring
    , cmdargs
    , containers
    , days2024
    , directory
    , helpers
    , time

  -- ghc-options: -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8"
  ghc-options:      -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8 -p"
  default-language: Haskell2010

library days2024
  hs-source-dirs:   2024/days
  exposed-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  build-depends:
    , arithmoi
    , array
    , base
    , bytestring
    , containers
    , fgl
    , helpers
    , linear
    , massiv
    , megaparsec
    , mono-traversable
    , mtl
    , multiset
    , parallel
    , psqueues
    , semialign
    , split
    , statistics
    , unordered-containers
    , vector
    , word8

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

-- executable aoc2025
--   main-is:          Main.hs
--   hs-source-dirs:   2025
--   build-depends:
--    , base
--    , cmdargs
--    , containers
--    , days2025
--    , helpers
--    , text
--    , time
--   ghc-options:
--     -threaded -O3 -fllvm -pgmlo /usr/lib/llvm/18/bin/opt -pgmlc
--     /usr/lib/llvm/18/bin/llc -with-rtsopts=-N8
-- 
--   default-language: Haskell2010
-- 
-- library days2025
--   hs-source-dirs:   2025/days
--   exposed-modules:
--     Day1
--     Day10
--     Day11
--     Day12
--     Day13
--     Day14
--     Day15
--     Day16
--     Day17
--     Day18
--     Day19
--     Day2
--     Day20
--     Day21
--     Day22
--     Day23
--     Day24
--     Day25
--     Day3
--     Day4
--     Day5
--     Day6
--     Day7
--     Day8
--     Day9
-- 
--   build-depends:
--    , base
--    , helpers
--    , text
-- 
--   default-language: Haskell2010

test-suite tests2015
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test/2015
  build-depends:
    , base
    , days2015
    , tasty
    , tasty-hunit
    , utf8-string

  default-language: Haskell2010

test-suite tests2016
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test/2016

  -- other-modules: Helpers.Parsers, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9
  --               , Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17
  --              , Day18, Day19, Day20, Day21, Day22, Day23, Day24, Day25
  build-depends:
    , array
    , base
    , base16-bytestring
    , containers
    , cryptohash-md5
    , days2016
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , HUnit
    , linear
    , megaparsec
    , mono-traversable
    , mtl
    , multiset
    , psqueues
    , semialign
    , split
    , text
    , text-show
    , unordered-containers
    , vector

  default-language: Haskell2010

test-suite tests2023
  type:           exitcode-stdio-1.0
  main-is:        Tests.hs
  hs-source-dirs: test/2023
  build-depends:
    , array
    , base
    , bytestring
    , days2023
    , helpers
    , linear
    , tasty
    , tasty-hunit
    , utf8-string

  default-language: Haskell2010

test-suite tests2024
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test/2024
  build-depends:
    , arithmoi
    , array
    , base
    , containers
    , days2024
    , fgl
    , graphviz
    , hashable
    , helpers
    , HUnit
    , linear
    , megaparsec
    , mono-traversable
    , mtl
    , multiset
    , parallel
    , psqueues
    , semialign
    , split
    , statistics
    , text
    , unordered-containers
    , vector

  default-language: Haskell2010

benchmark bench
  main-is:          Bench.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench/general
  build-depends:
    , base
    , bytestring
    , days2015
    , directory
    , helpers
    , massiv
    , megaparsec
    , mtl
    , tasty-bench
    , text         >=2.1
    , utf8-string

  ghc-options:      -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8 -T"
  default-language: Haskell2010

benchmark full-year
  main-is:          FullYear.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench/fullyear
  build-depends:
    , base
    , bytestring
    , days2023
    , directory
    , helpers
    , tasty-bench
    , utf8-string

  ghc-options:      -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8 -T"
  default-language: Haskell2010
